# Display.Monochrome.SDL2

./: .cproject  .gitignore  .project  CMakeLists.txt  app.cpp  app.hpp  common.h  main.cpp
